--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://7245c494-b1bb-4163-89da-c28223bcb24c.preview.emergentagent.com
 WDS_SOCKET_PORT=443
